2010-07-29  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Dirk Schulze.

        WebKit shouldn't ignore resource cycles, but break them as Opera does
        https://bugs.webkit.org/show_bug.cgi?id=43031

        mask images are not updated when render objects' bounds change
        https://bugs.webkit.org/show_bug.cgi?id=15124

        SVG Gradients do not resize correctly
        https://bugs.webkit.org/show_bug.cgi?id=41902

        svg/dynamic-updates: SVGMarkerElement markerHeight/Width tests are broken
        https://bugs.webkit.org/show_bug.cgi?id=42616

        svg/dynamic-updates: SVGMaskElement tests are all broken
        https://bugs.webkit.org/show_bug.cgi?id=42617

        Don't ignore resources containing cyclic references, but break them, as discussed on SVG WG mailing lists - to be compatible with Opera which already does that.

        We used to lookup RenderSVGResourceContainers objects, by extracting the URI reference from the SVGRenderStyle, then utilizing getElementById() to lookup the
        node, and access its renderer. Opera ignores such references, if they point to resources that contain cyclic references. Ignoring them would mean we have
        to mutate the render style to empty the resource strings. That obviously doesn't work, as it would break expectations (getComputedStyle, etc.).

        Introduce a SVGResources class that stores pointers to all resources, that can be applied to a RenderObject (clipper/filter/markers/masker).
        Add a SVGResourcesCache class, which is basically a HashMap<RenderObject*, SVGResources*>. Whenever a RenderObject receives style, we extract the URI references
        from the SVGRenderStyle, look up the RenderSVGResourceContainer* objects, and store them in a SVGResources* class. Then we execute a cycle detection logic,