@@ -72,8 +72,9 @@ bool RenderSVGContainer::selfWillPaint()
 #if ENABLE(FILTERS)
     SVGResources* resources = SVGResourcesCache::cachedResourcesForRenderObject(this);
     return resources && resources->filter();
-#endif
+#else
     return false;
+#endif
 }
 
 void RenderSVGContainer::paint(PaintInfo& paintInfo, int, int)
